fixed the shift that happens when the scrollbar dissapears and lowered the width of modalContent

--- a/components/reusable-components/reusable-modal/reusableModal.module.scss
+++ b/components/reusable-components/reusable-modal/reusableModal.module.scss
@@ -48,7 +48,7 @@
       gap: 1.25rem;
 
       .modalContent {
-        width: 100%;
+        width: 90%;
         display: flex;
         flex-direction: column;
         justify-content: center;
